examples/sensorLibrary/src/native/wifi/win32/wifisensor_windows/wifisensor_windows/Wifi_Win_Available/WiFiMan.h



WIFIAPI EnumerateProfiles(int AdapterInd);

WIFIAPI GetProfileName(int AdapterInd, int ProfileInd, LPTSTR Name, int MaxCount);

WIFIAPI GetProfileNetworkIndex(int AdapterInd, char * NetName);


WIFIAPI GetCurrentNetworkName(int AdapterInd, LPTSTR Name, int MaxCount);

WIFIAPI GetCurrentNetworkChannel(int AdapterInd);

WIFIAPI GetCurrentNetworkSpeed(int AdapterInd);

WIFIAPI GetCurrentNetworkMac(int AdapterInd, BYTE * d1, BYTE * d2, BYTE * d3, BYTE * d4, BYTE * d5, BYTE * d6);


WIFIAPI ConnectToNetwork(int AdapterInd, LPTSTR Name);

WIFIAPI ConnectToNetworkByMAC(int AdapterInd, BYTE d1, BYTE d2, BYTE d3, BYTE d4, BYTE d5, BYTE d6);

WIFIAPI DisconnectFromNetwork(int AdapterInd);


WIFIAPI MoveProfile(int AdapterInd, int ProfileInd, int NewIndex);

WIFIAPI DeleteProfile(int AdapterInd, int ProfileInd);


WIFIAPI OpenProfilesUI(int AdapterInd);

WIFIAPI RepairAdapter(int AdapterInd);


//these functions create temporary profiles
WIFIAPI CreateTmpProfile(int Template);

WIFIAPI FreeTmpProfile(int ProfileHandle);

WIFIAPI CloneTmpProfile(int ProfileHandle);

WIFIAPI LoadTmpProfile(char * FileName);

WIFIAPI LoadTmpProfileFromString(char * Str);

WIFIAPI GetTmpProfileFromAdapter(int AdapterInd, int ProfileInd);

//apply temporary profile to adapter
WIFIAPI SetTmpProfileToAdapter(int ProfileHandle, int AdapterInd);

//get/set option
WIFIAPI SetTmpProfileOption(int ProfileHandle, char * OptionName, char * Value);

WIFIAPI GetTmpProfileOption(int ProfileHandle, char * OptionName, char * Value, int MaxCount);

WIFIAPI DeleteTmpProfileOption(int ProfileHandle, char * OptionName);

//802.1x support
WIFIAPI SetDefaultEapConfig(int ProfileHandle, int EapEnabled, int UseWindowsCredentials);

//save to xml file
WIFIAPI SaveTmpProfile(int ProfileHandle, char * FileName);


WIFIAPI GetWindowsFirewallStatus(int * ExceptionsNotAllowed, int * NotificationsDisabled);
 
WIFIAPI EnableWindowsFirewall(int ExceptionsNotAllowed, int NotificationsDisabled);
 
WIFIAPI DisableWindowsFirewall();


WIFIAPI EnumerateAllNetAdapters();

WIFIAPI GetNetAdapterName(int NetAdapterInd, char * Name, int MaxCount);

WIFIAPI GetNetAdapterGUID(int NetAdapterInd, char * Guid, int MaxCount);

WIFIAPI IsNetAdapterWiFi(int NetAdapterInd);

WIFIAPI GetNetAdapterState(int NetAdapterInd);

WIFIAPI EnableNetAdapter(int NetAdapterInd);

WIFIAPI DisableNetAdapter(int NetAdapterInd);

WIFIAPI RestartNetAdapter(int NetAdapterInd);

WIFIAPI GetNetAdapterCurrentIPInfo(int NetAdapterInd, char * IP, char * Mask, char * Gateway, int MaxCount);

WIFIAPI GetNetAdapterIPInfo(int NetAdapterInd, char * IP, char * Mask, char * Gateway, int * DHCPEnabled, int MaxCount);

WIFIAPI SetNetAdapterIPInfo(int NetAdapterInd, char * IP, char * Mask, char * Gateway, int DHCPEnabled);

WIFIAPI GetNetAdapterDNS(int NetAdapterInd, char * DNS, int MaxCount);

WIFIAPI SetNetAdapterDNS(int NetAdapterInd, char * DNS);

WIFIAPI GetNetAdapterMac(int NetAdapterInd, BYTE * d1, BYTE * d2, BYTE * d3, BYTE * d4, BYTE * d5, BYTE * d6);

WIFIAPI GetNetAdapterDefaultMac(int NetAdapterInd, BYTE * d1, BYTE * d2, BYTE * d3, BYTE * d4, BYTE * d5, BYTE * d6);

WIFIAPI SetNetAdapterMac(int NetAdapterInd, BYTE d1, BYTE d2, BYTE d3, BYTE d4, BYTE d5, BYTE d6);

WIFIAPI SetNetAdapterDefaultMac(int NetAdapterInd);

WIFIAPI GetNetAdapterFirewallState(int NetAdapterInd);

WIFIAPI EnableNetAdapterFirewall(int NetAdapterInd);

WIFIAPI DisableNetAdapterFirewall(int NetAdapterInd);

WIFIAPI GetNetAdapterTraffic(int NetAdapterInd, DWORD * InDataH, DWORD * InDataL, DWORD * OutDataH, DWORD * OutDataL);