examples/sensorLibrary/src/native/wifi/win32/wifisensor_windows/wifisensor_windows/Wifi_Win_Available/WiFiMan.bas


Public Declare Function EnumerateProfiles Lib "WiFiMan.dll" (ByVal AdapterInd As Long) As Long
Public Declare Function GetProfileName Lib "WiFiMan.dll" (ByVal AdapterInd As Long, ByVal ProfileInd As Long, ByVal Name As String, ByVal MaxCount As Long) As Long
Public Declare Function GetProfileNetworkIndex Lib "WiFiMan.dll" (ByVal AdapterInd As Long, ByVal NetName As String) As Long

Public Declare Function GetCurrentNetworkName Lib "WiFiMan.dll" (ByVal AdapterInd As Long, ByVal Name As String, ByVal MaxCount As Long) As Long
Public Declare Function GetCurrentNetworkChannel Lib "WiFiMan.dll" (ByVal AdapterInd) As Long
Public Declare Function GetCurrentNetworkSpeed Lib "WiFiMan.dll" (ByVal AdapterInd) As Long
Public Declare Function GetCurrentNetworkMac Lib "WiFiMan.dll" (ByVal AdapterInd As Long, ByRef d1 As Byte, ByRef d2 As Byte, ByRef d3 As Byte, ByRef d4 As Byte, ByRef d5 As Byte, ByRef d6 As Byte) As Long

Public Declare Function ConnectToNetwork Lib "WiFiMan.dll" (ByVal AdapterInd As Long, ByVal Name As String) As Long
Public Declare Function ConnectToNetworkByMAC Lib "WiFiMan.dll" (ByVal AdapterInd As Long, ByVal d1, ByVal d2, ByVal d3, ByVal d4, ByVal d5, ByVal d6) As Long
Public Declare Function DisconnectFromNetwork Lib "WiFiMan.dll" (ByVal AdapterInd As Long) As Long

Public Declare Function MoveProfile Lib "WiFiMan.dll" (ByVal AdapterInd As Long, ByVal ProfileInd As Long, ByVal NewIndex As Long) As Long
Public Declare Function DeleteProfile Lib "WiFiMan.dll" (ByVal AdapterInd As Long, ByVal ProfileInd As Long) As Long

Public Declare Function OpenProfilesUI Lib "WiFiMan.dll" (ByVal AdapterInd As Long) As Long
Public Declare Function RepairAdapter Lib "WiFiMan.dll" (ByVal AdapterInd As Long) As Long

Public Declare Function CreateTmpProfile Lib "WiFiMan.dll" (ByVal Template) As Long
Public Declare Function FreeTmpProfile Lib "WiFiMan.dll" (ByVal ProfileHandle) As Long
Public Declare Function CloneTmpProfile Lib "WiFiMan.dll" (ByVal ProfileHandle) As Long
Public Declare Function LoadTmpProfile Lib "WiFiMan.dll" (ByVal FileName As String) As Long
Public Declare Function LoadTmpProfileFromString Lib "WiFiMan.dll" (ByVal Str As String) As Long
Public Declare Function GetTmpProfileFromAdapter Lib "WiFiMan.dll" (ByVal AdapterInd, ByVal ProfileInd) As Long
Public Declare Function SetTmpProfileToAdapter Lib "WiFiMan.dll" (ByVal ProfileHandle, ByVal AdapterInd) As Long
Public Declare Function SetTmpProfileOption Lib "WiFiMan.dll" (ByVal ProfileHandle, ByVal OptionName As String, ByVal Value As String) As Long
Public Declare Function GetTmpProfileOption Lib "WiFiMan.dll" (ByVal ProfileHandle, ByVal OptionName As String, ByVal Value As String, ByVal MaxCount As Long) As Long
Public Declare Function DeleteTmpProfileOption Lib "WiFiMan.dll" (ByVal ProfileHandle, ByVal OptionName As String) As Long
Public Declare Function SetDefaultEapConfig Lib "WiFiMan.dll" (ByVal ProfileHandle, ByVal EapEnabled As Long, ByVal UseWindowsCredentials As Long) As Long

Public Declare Function SaveTmpProfile Lib "WiFiMan.dll" (ByVal ProfileHandle, ByVal FileName As String) As Long

Public Declare Function GetWindowsFirewallStatus Lib "WiFiMan.dll" (ByRef ExceptionsNotAllowed As Long, ByRef NotificationsDisabled As Long) As Long
Public Declare Function EnableWindowsFirewall Lib "WiFiMan.dll" (ByVal ExceptionsNotAllowed As Long, ByVal NotificationsDisabled As Long) As Long
Public Declare Function DisableWindowsFirewall Lib "WiFiMan.dll" () As Long

Public Declare Function EnumerateAllNetAdapters Lib "WiFiMan.dll" () As Long
Public Declare Function GetNetAdapterGUID Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByVal Guid As String, ByVal MaxCount As Long) As Long
Public Declare Function IsNetAdapterWiFi Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long) As Long
Public Declare Function GetNetAdapterName Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByVal Name As String, ByVal MaxCount As Long) As Long
Public Declare Function GetNetAdapterState Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long) As Long
Public Declare Function EnableNetAdapter Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long) As Long
Public Declare Function DisableNetAdapter Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long) As Long
Public Declare Function RestartNetAdapter Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long) As Long
Public Declare Function GetNetAdapterCurrentIPInfo Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByVal IP As String, ByVal Mask As String, ByVal Gateway As String, ByVal MaxCount As Long) As Long
Public Declare Function GetNetAdapterIPInfo Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByVal IP As String, ByVal Mask As String, ByVal Gateway As String, ByRef DHCPEnabled As Long, ByVal MaxCount As Long) As Long
Public Declare Function SetNetAdapterIPInfo Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByVal IP As String, ByVal Mask As String, ByVal Gateway As String, ByVal DHCPEnabled As Long) As Long
Public Declare Function GetNetAdapterDNS Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByVal DNS As String, ByVal MaxCount As Long) As Long
Public Declare Function SetNetAdapterDNS Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByVal DNS As String) As Long
Public Declare Function GetNetAdapterMac Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByRef d1 As Byte, ByRef d2 As Byte, ByRef d3 As Byte, ByRef d4 As Byte, ByRef d5 As Byte, ByRef d6 As Byte) As Long
Public Declare Function GetNetAdapterDefaultMac Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByRef d1 As Byte, ByRef d2 As Byte, ByRef d3 As Byte, ByRef d4 As Byte, ByRef d5 As Byte, ByRef d6 As Byte) As Long
Public Declare Function SetNetAdapterMac Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByVal d1 As Byte, ByVal d2 As Byte, ByVal d3 As Byte, ByVal d4 As Byte, ByVal d5 As Byte, ByVal d6 As Byte) As Long
Public Declare Function SetNetAdapterDefaultMac Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long) As Long
Public Declare Function GetNetAdapterFirewallState Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long) As Long
Public Declare Function EnableNetAdapterFirewall Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long) As Long
Public Declare Function DisableNetAdapterFirewall Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long) As Long
Public Declare Function GetNetAdapterTraffic Lib "WiFiMan.dll" (ByVal NetAdapterInd As Long, ByRef InDataH As Long, ByRef InDataL As Long, ByRef OutDataH As Long, ByRef OutDataL As Long) As Long










